--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.3",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
-    "js-cookies": "^1.0.4",
+    "js-cookie": "^3.0.5",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
